--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EMOBOX - Dashboard Emosi</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="assets/main-BqPkBd4e.js"></script>
+    <script type="module" src="/assets/main-BqPkBd4e.js"></script>
   </body>
 </html>
